--- a/layout.css
+++ b/layout.css
@@ -23,3 +23,40 @@ h1{
     font-size: 30px;
     font-weight: bold;
 }
+/*
+body{
+    background-color: #ECE2D0;
+    color: #582c4d;
+}
+.box-one{
+    background-color: #bfb5af;
+}
+.box-one:hover{
+    background-color: #A26769;
+    color: #582c4d;
+}
+
+.box-two{
+    background-color: A26769;
+}
+.box-two:hover{
+    background-color: #A26769;
+    color: #582c4d;
+}
+
+.box-three{
+    background-color: A26769;
+}
+.box-three:hover{
+    background-color: #A26769;
+    color: #582c4d;
+}
+
+.box-four{
+    background-color: #bfb5af;
+}
+.box-four:hover{
+    background-color: #A26769;
+    color: #582c4d;
+}
+*/
