--- a/colors.css
+++ b/colors.css
@@ -1,19 +1,28 @@
+:root{
+    --Pagraphs: #A26769;
+    --Boxes: #D5B9B2;
+    --Headdings: #582C4D;
+    --Boxes-Hover: #BFB5AF;
+    --Background: #ECE2D0;
+}
 body{
-    background-color: #ECE2D0;
+    background-color: #val(var(--Background));
     color: #582c4d;
 }
 .box-one{
     background-color: #bfb5af;
 }
 .box-one:hover{
-    color: #ECE2D0;
+    background-color: #A26769;
+    color: #582c4d;
 }
 
 .box-two{
     background-color: A26769;
 }
 .box-two:hover{
-    color: #ECE2D0;
+    background-color: #A26769;
+    color: #582c4d;
 }
 
 .box-three{
@@ -28,5 +37,6 @@ body{
     background-color: #bfb5af;
 }
 .box-four:hover{
-    color: #bfb5af;
+    background-color: #A26769;
+    color: #582c4d;
 }
